Bug 122559 - FILEOPEN: EMF+: Pen transparency value is always displayed as opaque
Summary: FILEOPEN: EMF+: Pen transparency value is always displayed as opaque
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Bartosz
URL:
Whiteboard: target:6.3.0
Keywords: filter:emf
Depends on:
Blocks: EMF-WMF
  Show dependency treegraph
 
Reported: 2019-01-07 23:33 UTC by Bartosz
Modified: 2019-01-09 16:35 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
EMF+ which is wrongly displayed under Writer/Draw (2.32 KB, image/emf)
2019-01-07 23:34 UTC, Bartosz
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Bartosz 2019-01-07 23:33:11 UTC
Description:
Pen transparency value is not always displayed as opaque

Steps to Reproduce:
1. Drag and drop attached EMF+ file to Writer
2. Compare attached image with file displayed by MS Word


Actual Results:
The blue pen's stroke is opaque

Expected Results:
The blue pen's stroke is partially transparen


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 Bartosz 2019-01-07 23:34:10 UTC
Created attachment 148123 [details]
EMF+ which is wrongly displayed under Writer/Draw
Comment 2 Commit Notification 2019-01-09 16:34:06 UTC
Bartosz Kosiorek committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/97bb3611d78ed33c6d538a38117c869fe7286cd3%5E%21

tdf#122559 EMF+ Add transparency support for drawing lines

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.