tdf#122559 EMF+ Add transparency support for drawing lines

Change-Id: I62081f33eb04e70742d61418fa336f184f0f359b